service/main/default/objects/FormResponseSending__mdt/FormResponseSending__mdt.object-meta.xml
<CustomObject>
    <description>Determine whether to automatically send a form to precise the case qualification or not according to the email address the customer reached.</description>
    <label>Form Response Sending</label>
    <pluralLabel>Form Response Sendings</pluralLabel>
</CustomObject>