service/main/default/objects/FormResponseSending__mdt/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address the client wrote to.</description>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>