service/main/default/objects/FormResponseSending__mdt/fields/QueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>QueueDeveloperName__c</fullName>
    <description>Developer Name of the Queue for which a form should be sent by email.</description>
    <label>Queue Developer Name</label>
    <required>true</required>
    <type>Email</type>
</CustomField>