service/main/default/objects/FormResponseSending__mdt/fields/SendForm__c.field-meta.xml
<CustomField>
    <fullName>SendForm__c</fullName>
    <complianceGroup>RGPD</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Determines whether to send the form or not.</description>
    <label>Send Form</label>
    <type>Checkbox</type>
</CustomField>