service/main/default/objects/FormResponseSending__mdt/listViews/FormResponseSendings.listView-meta.xml
<ListView>
    <fullName>FormResponseSendings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>EmailAddress__c</columns>
    <columns>SendForm__c</columns>
    <filterScope>Everything</filterScope>
    <label>Form Response Sendings</label>
    <language>en_US</language>
</ListView>